--- a/contactus.html
+++ b/contactus.html
@@ -63,11 +63,11 @@ button:hover, a:hover {
 <div class="card">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXpMzbo4a6pnjG2DzJSO8pd8_CAYg-abl76Q&usqp=CAU" alt="Nabeel" style="width:100%">
   <div class="container">
-    <h1>CHIRAG GOYAL</h1>
-    <p class="title">B.TECH(COMP) III YEAR</p>
+    <h1>ROHIT REDDY</h1>
+    <p class="title">B.TECH(ISE) III YEAR</p>
     <p>SIRMVIT</p>
     <div style="margin: 24px 0;">
-      <a href='https://www.linkedin.com/in/chirag-goyal-888530200'><i class="fa fa-facebook"></i></a> 
+      <a href='https://www.linkedin.com/in/rohit-reddy19'><i class="fab fa-linkedin-in"></i></a> 
    </div>
   </div>
 </div>
